[package]
name = "net-time"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/qy3u/net-time"
homepage = "https://github.com/qy3u/net-time"
documentation = "https://github.com/qy3u/net-time"
description = "get time from internet"
license = "MIT OR Apache-2.0"


[dependencies]
ureq = "2.4.0"
anyhow = "1.0.57"
serde_json = "1.0"
